math self-assessment

--- a/math-self-assessment.html
+++ b/math-self-assessment.html
@@ -15,7 +15,8 @@
 <div id="toctitle">Table of Contents</div>
 <ul class="sectlevel1">
 <li><a href="#_animation_pre_requisites_self_assessment">Animation Pre-requisites: Self-assessment</a></li>
-<li><a href="#_trigonometry_anchortrig">Trigonometry anchor:trig[]</a></li>
+<li><a href="#_name">Name:</a></li>
+<li><a href="#_trigonometry">Trigonometry </a></li>
 <li><a href="#_vectors">Vectors </a></li>
 <li><a href="#_matrices">Matrices </a></li>
 <li><a href="#_polynomials">Polynomials </a></li>
@@ -26,17 +27,23 @@
 <div class="sect1">
 <h2 id="_animation_pre_requisites_self_assessment">Animation Pre-requisites: Self-assessment</h2>
 <div class="sectionbody">
+
+</div>
+</div>
+<div class="sect1">
+<h2 id="_name">Name:</h2>
+<div class="sectionbody">
 <div class="paragraph">
-<p>Use the questions below to identify topics for review.</p>
+<p>Use the questions below to identify any topics you should review. See the <a href="week01.html">week 01 notes for background information on these topics</a>.</p>
 </div>
 </div>
 </div>
 <div class="sect1">
-<h2 id="_trigonometry_anchortrig">Trigonometry anchor:trig[]</h2>
+<h2 id="_trigonometry">Trigonometry <a id="trig"></a></h2>
 <div class="sectionbody">
 <div class="paragraph">
 <p>Consider the point <strong>p</strong> and angle \(\theta\) below, where <strong>p</strong> is a distance of 1 unit from the origin and
-\(\theta\) is 45 degrees. What is the coordinate of <strong>p</strong>? Hint: what are the values of a and b?</p>
+\(\theta\) is 45 degrees. What is the coordinate of <strong>p</strong>? Hint: what are the values of a and b in terms of \(\theta\)?</p>
 </div>
 <div class="paragraph">
 <p><span class="image"><img src="trig-ex1.png" alt="trig ex1" width="200"></span></p>
@@ -49,6 +56,11 @@
 </div>
 <div class="paragraph">
 <p>Consider the point \(p_2\) and angle \(\theta_2\) above. Suppose \(p_2=(3,-2,0)^T\). What is the value of \(\theta_2\)? Hint: Use tangent.</p>
+</div>
+<div class="paragraph">
+<p>&#160;<br>
+&#160;<br>
+&#160;<br></p>
 </div>
 </div>
 </div>
@@ -67,23 +79,41 @@ Suppose we have a vector <strong>u</strong>=(-2, 3, 0)<sup>T</sup> and <strong>v
 </ul>
 </div>
 <div class="paragraph">
-<p><span class="image"><img src="coordinate-system.png" alt="coordinate system" width="500"></span></p>
+<p><span class="image"><img src="coordinate-system.png" alt="coordinate system" width="300"></span></p>
 </div>
 <div class="ulist">
 <ul>
 <li>
 <p>What is the length of <strong>u</strong>?</p>
 </li>
+</ul>
+</div>
+<div class="paragraph">
+<p>&#160;<br>
+&#160;<br>
+&#160;<br></p>
+</div>
+<div class="ulist">
+<ul>
 <li>
 <p>What is the distance between <strong>u</strong> and <strong>v</strong>?</p>
 </li>
+</ul>
+</div>
+<div class="paragraph">
+<p>&#160;<br>
+&#160;<br>
+&#160;<br></p>
+</div>
+<div class="ulist">
+<ul>
 <li>
 <p>Compute and draw <strong>u + v</strong>.</p>
 </li>
 </ul>
 </div>
 <div class="paragraph">
-<p><span class="image"><img src="coordinate-system.png" alt="coordinate system" width="500"></span></p>
+<p><span class="image"><img src="coordinate-system.png" alt="coordinate system" width="300"></span></p>
 </div>
 <div class="ulist">
 <ul>
@@ -93,20 +123,43 @@ Suppose we have a vector <strong>u</strong>=(-2, 3, 0)<sup>T</sup> and <strong>v
 </ul>
 </div>
 <div class="paragraph">
-<p><span class="image"><img src="coordinate-system.png" alt="coordinate system" width="500"></span></p>
+<p><span class="image"><img src="coordinate-system.png" alt="coordinate system" width="300"></span></p>
 </div>
 <div class="ulist">
 <ul>
 <li>
 <p>Compute the cross product \(u \times v\).</p>
 </li>
+</ul>
+</div>
+<div class="paragraph">
+<p>&#160;<br>
+&#160;<br>
+&#160;<br></p>
+</div>
+<div class="ulist">
+<ul>
 <li>
 <p>Normalize the vector <strong>u</strong>, e.g. compute \(\frac{u}{\|u\|}\).</p>
 </li>
+</ul>
+</div>
+<div class="paragraph">
+<p>&#160;<br>
+&#160;<br>
+&#160;<br></p>
+</div>
+<div class="ulist">
+<ul>
 <li>
 <p>Compute the dot product \(u \cdot v\).</p>
 </li>
 </ul>
+</div>
+<div class="paragraph">
+<p>&#160;<br>
+&#160;<br>
+&#160;<br></p>
 </div>
 </div>
 </div>
@@ -138,19 +191,60 @@ C = \begin{bmatrix}
 <li>
 <p>What are the dimensions of A, B, and C?</p>
 </li>
+</ul>
+</div>
+<div class="paragraph">
+<p>&#160;<br>
+&#160;<br>
+&#160;<br></p>
+</div>
+<div class="ulist">
+<ul>
 <li>
 <p>What is the transpose of the matric C?</p>
 </li>
+</ul>
+</div>
+<div class="paragraph">
+<p>&#160;<br>
+&#160;<br>
+&#160;<br></p>
+</div>
+<div class="ulist">
+<ul>
 <li>
 <p>Compute the products AB and BA.</p>
 </li>
+</ul>
+</div>
+<div class="paragraph">
+<p>&#160;<br>
+&#160;<br>
+&#160;<br></p>
+</div>
+<div class="ulist">
+<ul>
 <li>
 <p>Is it possible to multiply C times itself? Why not? What about CC<sup>T</sup>?</p>
 </li>
+</ul>
+</div>
+<div class="paragraph">
+<p>&#160;<br>
+&#160;<br>
+&#160;<br></p>
+</div>
+<div class="ulist">
+<ul>
 <li>
 <p>What is the product of \(AA^{-1}\)?</p>
 </li>
 </ul>
+</div>
+<div class="paragraph">
+<p>&#160;<br>
+&#160;<br>
+&#160;<br></p>
 </div>
 <div class="paragraph">
 <p>Consider the following matrix</p>
@@ -172,7 +266,7 @@ cos(30) &amp; sin(30) &amp; 0\\
 </ul>
 </div>
 <div class="paragraph">
-<p><span class="image"><img src="coordinate-system.png" alt="coordinate system" width="500"></span></p>
+<p><span class="image"><img src="coordinate-system.png" alt="coordinate system" width="300"></span></p>
 </div>
 </div>
 </div>
@@ -187,13 +281,36 @@ cos(30) &amp; sin(30) &amp; 0\\
 <li>
 <p>What is the degree of \(p(t)\)?</p>
 </li>
+</ul>
+</div>
+<div class="paragraph">
+<p>&#160;<br>
+&#160;<br>
+&#160;<br></p>
+</div>
+<div class="ulist">
+<ul>
 <li>
 <p>What is the derivative of \(p(t)\)?</p>
 </li>
+</ul>
+</div>
+<div class="paragraph">
+<p>&#160;<br>
+&#160;<br>
+&#160;<br></p>
+</div>
+<div class="ulist">
+<ul>
 <li>
 <p>What is the value of \(p(t)\) when t = -1?</p>
 </li>
 </ul>
+</div>
+<div class="paragraph">
+<p>&#160;<br>
+&#160;<br>
+&#160;<br></p>
 </div>
 <div class="paragraph">
 <p>Let \(B_0(t) = (t - 1)^2\) and \(B_1 = t - 2\).</p>
@@ -222,7 +339,7 @@ Standard form has the following pattern: \(a_nt^n + \ldots + a_2 t^2 + a t + a_0
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-08-27 13:38:39 -0400
+Last updated 2021-08-27 18:44:02 -0400
 </div>
 </div>
 <script type="text/x-mathjax-config">
