--- a/week01.html
+++ b/week01.html
@@ -17,7 +17,14 @@
 <li><a href="#_week_01_hello_cs317">Week 01: Hello CS317!</a></li>
 <li><a href="#_from_java_to_c">From Java to C++</a></li>
 <li><a href="#_development_environment">Development environment</a></li>
-<li><a href="#_math_overview">Math Overview</a></li>
+<li><a href="#_math_overview">Math Overview</a>
+<ul class="sectlevel2">
+<li><a href="#_trigonometry">Trigonometry</a></li>
+<li><a href="#_vectors">Vectors</a></li>
+<li><a href="#_matrices">Matrices</a></li>
+<li><a href="#_polynomials">Polynomials</a></li>
+</ul>
+</li>
 <li><a href="#_introduction_to_animation">Introduction to animation</a></li>
 </ul>
 </div>
@@ -60,6 +67,13 @@
 <ul>
 <li>
 <p>link:JavaToC.pdf[Java to C]</p>
+<div class="ulist">
+<ul>
+<li>
+<p><a href="https://github.com/BrynMawr-CS317-F21/cpp-lecture">C++ examples from lecture</a></p>
+</li>
+</ul>
+</div>
 </li>
 </ul>
 </div>
@@ -129,14 +143,13 @@ for development. Do it! It&#8217;s a great idea. Make sure your code runs in the
 <div class="paragraph">
 <p>This class relies on vectors, matrices, and polynomials. Specifically,</p>
 </div>
+<div class="sect2">
+<h3 id="_trigonometry">Trigonometry</h3>
 <div class="paragraph">
-<p><strong>Trigonometry</strong></p>
+<p><a href="math-self-assessment.html#trig">Sample Problems</a>.</p>
 </div>
 <div class="paragraph">
-<p>Try the sample problems <a href="math-self-assessment.html#trig">here</a>.</p>
-</div>
-<div class="paragraph">
-<p>Background resources:</p>
+<p>Review resources:</p>
 </div>
 <div class="ulist">
 <ul>
@@ -148,33 +161,14 @@ for development. Do it! It&#8217;s a great idea. Make sure your code runs in the
 </li>
 </ul>
 </div>
+</div>
+<div class="sect2">
+<h3 id="_vectors">Vectors</h3>
 <div class="paragraph">
-<p><strong>Vectors</strong></p>
+<p><a href="math-self-assessment.html#vector">Sample Problems</a>.</p>
 </div>
 <div class="paragraph">
-<p>Try the sample problems <a href="math-self-assessment.html#vector">here</a>.</p>
-</div>
-<div class="ulist">
-<ul>
-<li>
-<p>coordinate systems: axes, origin, \$\hat{i}, \hat{j}, \hat{k}\$</p>
-</li>
-<li>
-<p>adding, subtracting, scaling</p>
-</li>
-<li>
-<p>length and distance</p>
-</li>
-<li>
-<p>dot product</p>
-</li>
-<li>
-<p>cross product</p>
-</li>
-</ul>
-</div>
-<div class="paragraph">
-<p>Background resources:</p>
+<p>Review resources:</p>
 </div>
 <div class="ulist">
 <ul>
@@ -192,39 +186,14 @@ for development. Do it! It&#8217;s a great idea. Make sure your code runs in the
 </li>
 </ul>
 </div>
+</div>
+<div class="sect2">
+<h3 id="_matrices">Matrices</h3>
 <div class="paragraph">
-<p><strong>Matrices</strong></p>
+<p><a href="math-self-assessment.html#matrix">Sample Problems</a>.</p>
 </div>
 <div class="paragraph">
-<p>Try the sample problems <a href="math-self-assessment.html#matrix">here</a>.</p>
-</div>
-<div class="ulist">
-<ul>
-<li>
-<p>Zero matrix</p>
-</li>
-<li>
-<p>Identity matrix</p>
-</li>
-<li>
-<p>Matrix dimension</p>
-</li>
-<li>
-<p>Matrix-Matrix multiplication</p>
-</li>
-<li>
-<p>Matrix-Vector multiplation</p>
-</li>
-<li>
-<p>Inverse</p>
-</li>
-<li>
-<p>Transpose</p>
-</li>
-</ul>
-</div>
-<div class="paragraph">
-<p>Background resources:</p>
+<p>Review resources:</p>
 </div>
 <div class="ulist">
 <ul>
@@ -245,23 +214,17 @@ for development. Do it! It&#8217;s a great idea. Make sure your code runs in the
 </li>
 </ul>
 </div>
+</div>
+<div class="sect2">
+<h3 id="_polynomials">Polynomials</h3>
 <div class="paragraph">
-<p><strong>Polynomials</strong></p>
+<p><a href="math-self-assessment.html#poly">Sample Problems</a>.</p>
 </div>
 <div class="paragraph">
-<p>Try the sample problems <a href="math-self-assessment.html#poly">here</a>.</p>
+<p>Review resources:</p>
 </div>
 <div class="ulist">
 <ul>
-<li>
-<p>Degree</p>
-</li>
-<li>
-<p>Manipulating expressions (algebra)</p>
-</li>
-<li>
-<p>Derivatives of polynomials</p>
-</li>
 <li>
 <p><a href="https://www.khanacademy.org/math/algebra/x2f8bb11595b61c86:quadratics-multiplying-factoring/x2f8bb11595b61c86:multiply-monomial-polynomial/v/polynomials-intro">Polynomials</a></p>
 </li>
@@ -269,6 +232,7 @@ for development. Do it! It&#8217;s a great idea. Make sure your code runs in the
 <p><a href="https://www.khanacademy.org/math/ap-calculus-ab/ab-differentiation-1-new/ab-2-6b/v/differentiating-polynomials-example">Differentiation of polynomials</a></p>
 </li>
 </ul>
+</div>
 </div>
 </div>
 </div>
@@ -324,7 +288,7 @@ This technique may also use <strong>retargeting</strong> to fit the recorded mot
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-08-27 13:44:46 -0400
+Last updated 2021-08-27 18:33:29 -0400
 </div>
 </div>
 </body>
