--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 </li>
 <li><a href="#_academic_integrity">Academic Integrity</a></li>
 <li><a href="#_academic_accommodations">Academic Accommodations</a></li>
+<li><a href="#_title_ix">Title IX</a></li>
 <li><a href="#_external_links">External Links</a></li>
 </ul>
 </div>
@@ -691,6 +692,27 @@ Services website. (<a href="http://www.brynmawr.edu/access-services/" class="bar
 </div>
 </div>
 <div class="sect1">
+<h2 id="_title_ix">Title IX</h2>
+<div class="sectionbody">
+<div class="paragraph">
+<p>Bryn Mawr/Haverford College is committed to fostering a safe and inclusive living and learning environment where all can feel secure and free from harassment. All forms of sexual misconduct, including sexual assault, sexual harassment, stalking, domestic violence, and dating violence are violations of Bryn Mawr/Haverford’s policies, whether they occur on or off campus. Bryn Mawr/Haverford faculty are committed to helping to create a safe learning environment for all students and for the College community as a whole. If you have experienced any form of gender or sex-based discrimination, harassment, or violence,
+know that help and support are available. Staff members are trained to support students in navigating campus life, accessing health and counseling services, providing academic and housing accommodations, and more.</p>
+</div>
+<div class="paragraph">
+<p>The College strongly encourages all students to report any incidents of sexual misconduct. Please be aware that all Bryn Mawr/Haverford employees (other than those designated as confidential resources such as counselors, clergy, and healthcare providers) are required to report information about such discrimination and harassment to the <a href="https://www.haverford.edu/users/ktaylor4">Bi-College Title IX Coordinator</a>.</p>
+</div>
+<div class="paragraph">
+<p>Information about the College’s Sexual Misconduct policy, reporting options, and a list of campus and local resources can be found on the College’s website:</p>
+</div>
+<div class="paragraph">
+<p><a href="https://www.brynmawr.edu/titleix">Bryn Mawr Sexual Misconduct Policy</a></p>
+</div>
+<div class="paragraph">
+<p><a href="https://www.haverford.edu/sexual-misconduct">Haverford Sexual Misconduct Policy</a></p>
+</div>
+</div>
+</div>
+<div class="sect1">
 <h2 id="_external_links">External Links</h2>
 <div class="sectionbody">
 <div class="paragraph">
@@ -711,7 +733,7 @@ Services website. (<a href="http://www.brynmawr.edu/access-services/" class="bar
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-08-12 11:30:35 -0400
+Last updated 2021-09-01 18:15:36 -0400
 </div>
 </div>
 </body>
