--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <div class="ulist">
 <ul>
 <li>
-<p>Welcome to CS 317!</p>
+<p><a href="asst00.html">Assignment 00</a> due September 09, midnight</p>
 </li>
 </ul>
 </div>
@@ -733,7 +733,7 @@ know that help and support are available. Staff members are trained to support s
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-09-01 21:13:06 -0400
+Last updated 2021-09-06 09:47:06 -0400
 </div>
 </div>
 </body>
