update office hours

--- a/index.html
+++ b/index.html
@@ -449,9 +449,9 @@ Transitions. Reorienting a motion. Crossfading.</p>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Thursday, 2:25pm - 3:45pm EST</p></td>
 </tr>
 <tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Office Hours</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Park 204</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Tuesday, 2:25pm - 3:45pm EST or by appointment (See calend.ly link on Slack)</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Professor Office Hours</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Science Center (Labs/Atrium/Park 204)</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Late afternoon Tues/Weds/Thurs. Check <a href="https://calendly.com/anormoyle/office-hours">calend.ly</a> for my availability. No appointment necessary unless you would to talk privately.</p></td>
 </tr>
 </tbody>
 </table>
@@ -733,7 +733,7 @@ know that help and support are available. Staff members are trained to support s
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-09-06 09:47:06 -0400
+Last updated 2021-09-06 10:28:53 -0400
 </div>
 </div>
 </body>
