update week 01 notes; fix typos in assignment 00 writeup

--- a/week02.html
+++ b/week02.html
@@ -64,10 +64,13 @@
 <div class="ulist">
 <ul>
 <li>
-<p><a href="https://gameprogrammingpatterns.com/game-loop.html">Game loop</a></p>
+<p><a href="https://en.wikipedia.org/wiki/Event-driven_architecture">Event-driven architectures</a></p>
 </li>
 <li>
-<p><a href="http://gameprogrammingpatterns.com/update-method.html">Update method</a></p>
+<p><a href="https://gameprogrammingpatterns.com/game-loop.html">Game loop pattern</a></p>
+</li>
+<li>
+<p><a href="https://www.glfw.org/docs/3.3/input_guide.html">GLFW Input Guide</a></p>
 </li>
 </ul>
 </div>
@@ -104,7 +107,7 @@
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-09-01 21:13:06 -0400
+Last updated 2021-09-06 17:00:57 -0400
 </div>
 </div>
 </body>
