--- a/week02.html
+++ b/week02.html
@@ -15,8 +15,8 @@
 <div id="toctitle">Table of Contents</div>
 <ul class="sectlevel1">
 <li><a href="#_week_02_first_animations">Week 02: First animations</a></li>
-<li><a href="#_points_vectors_and_time">Points, vectors, and time</a></li>
 <li><a href="#_design_patterns">Design patterns</a></li>
+<li><a href="#_points_vectors_and_time">Points, vectors, and time</a></li>
 <li><a href="#_first_animations">First animations</a></li>
 </ul>
 </div>
@@ -41,17 +41,8 @@
 </li>
 </ul>
 </div>
-</div>
-</div>
-<div class="sect1">
-<h2 id="_points_vectors_and_time">Points, vectors, and time</h2>
-<div class="sectionbody">
 <div class="paragraph">
-<p>Further reading:</p>
-</div>
-<div class="paragraph">
-<p>*
-* Lengyel: Chapter 2, 3.1, Appendix B.1, B.2, B.3, B.6, B.6</p>
+<p><a href="https://brynmawr.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=d1debb0e-da1f-49bb-8524-ad9c01399aba">Lecture 03 - 9/7/2021</a>,<a href="Notes/Lecture03-9.7.2021.pdf">Notes 9/7/2021</a></p>
 </div>
 </div>
 </div>
@@ -71,6 +62,21 @@
 </li>
 <li>
 <p><a href="https://www.glfw.org/docs/3.3/input_guide.html">GLFW Input Guide</a></p>
+</li>
+</ul>
+</div>
+</div>
+</div>
+<div class="sect1">
+<h2 id="_points_vectors_and_time">Points, vectors, and time</h2>
+<div class="sectionbody">
+<div class="paragraph">
+<p>Further reading:</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p>Lengyel: Chapter 2, 3.1, Appendix B.1, B.2, B.3, B.6, B.6</p>
 </li>
 </ul>
 </div>
@@ -107,7 +113,7 @@
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-09-06 17:00:57 -0400
+Last updated 2021-09-07 15:52:29 -0400
 </div>
 </div>
 </body>
