--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ on lecture content, worksheets, and assignments.</p>
 <p><a href="week02.html">Lecture notes and resources</a></p>
 </li>
 <li>
-<p><strong>Assignment 01</strong>: <a href="Labs/lab1-hello.html">Hello Animation!</a> <strong>Due Sept 16</strong></p>
+<p><strong>Assignment 01</strong>: <a href="asst01-hello.html">Hello Animation!</a> <strong>Due Sept 17</strong></p>
 </li>
 </ul>
 </div></div></td>
@@ -120,9 +120,6 @@ on lecture content, worksheets, and assignments.</p>
 <ul>
 <li>
 <p><a href="week03.html">Lecture notes and resources</a></p>
-</li>
-<li>
-<p><strong>Assignment 02:</strong> <a href="Labs/lab2-interp.html">Howl&#8217;s moving casteljau</a>: <strong>Due Sept 23</strong></p>
 </li>
 <li>
 <p><a href="Q1Guide.html">Quiz1 Study Guide</a>: Math preliminaries and first animations</p>
@@ -147,9 +144,6 @@ on lecture content, worksheets, and assignments.</p>
 <li>
 <p><a href="week04.html">Lecture notes and resources</a></p>
 </li>
-<li>
-<p><strong>Assignment 03:</strong> <a href="Labs/lab3-spline.html">The Catmull-Rom Com</a>: <strong>Due Sept 30</strong></p>
-</li>
 </ul>
 </div></div></td>
 </tr>
@@ -166,9 +160,6 @@ on lecture content, worksheets, and assignments.</p>
 <ul>
 <li>
 <p><a href="week05.html">Lecture notes and resources</a></p>
-</li>
-<li>
-<p><strong>Assignment 04:</strong> <a href="Labs/lab4-rotations.html">You spin me round</a>: <strong>Due Oct 7</strong></p>
 </li>
 <li>
 <p><a href="Q2Guide.html">Quiz2 Study Guide</a>: Interpolation and splines</p>
@@ -192,9 +183,6 @@ on lecture content, worksheets, and assignments.</p>
 </li>
 <li>
 <p><a href="week06.html">Lecture notes and resources</a></p>
-</li>
-<li>
-<p><strong>Assignment 05:</strong> <a href="Labs/lab5-quat.html">Quazy Quaternions</a>: <strong>Due Oct 21 (after fall break)</strong></p>
 </li>
 </ul>
 </div></div></td>
@@ -227,9 +215,6 @@ on lecture content, worksheets, and assignments.</p>
 <li>
 <p>Lengyel Chpt 4, Parent Chpt 2</p>
 </li>
-<li>
-<p><strong>Assignment 06:</strong> <a href="Labs/lab6-fk.html">Building character</a>: <strong>Due Oct 28</strong></p>
-</li>
 </ul>
 </div></div></td>
 </tr>
@@ -256,9 +241,6 @@ Motion. Poses. Motion Representation. Motion Capture. Procedural animation.</p>
 </li>
 <li>
 <p><a href="Q3Guide.html">Quiz3 Study Guide</a>: Rotations</p>
-</li>
-<li>
-<p><strong>Assignment 07:</strong> <a href="Labs/lab7-motion.html">Motion</a>: <strong>Due Nov 4</strong></p>
 </li>
 </ul>
 </div></div></td>
@@ -299,9 +281,6 @@ Transitions. Reorienting a motion. Crossfading.</p>
 <p><a href="Labs/ikccd.ogv">CCD demo</a></p>
 </li>
 <li>
-<p><strong>Assignment 09:</strong> <a href="Labs/lab9-ik.html">Reach for your goals</a>: <strong>Due Nov 18</strong></p>
-</li>
-<li>
 <p><a href="Q4Guide.html">Quiz4 Study Guide</a>: Transformations</p>
 </li>
 </ul>
@@ -340,9 +319,6 @@ Transitions. Reorienting a motion. Crossfading.</p>
 <p>Simple force particle: <a href="Labs/forceParticle.cpp.txt">Code</a></p>
 </li>
 <li>
-<p><strong>Assignment 10:</strong> <a href="Labs/Lab10-physics.html">Use the force</a>: <strong>Due Nov 22</strong></p>
-</li>
-<li>
 <p><strong>Quiz4 Nov 16</strong></p>
 </li>
 </ul>
@@ -362,9 +338,6 @@ Transitions. Reorienting a motion. Crossfading.</p>
 <li>
 <p><a href="http://www.red3d.com/cwr/steer/gdc99">Boids</a></p>
 </li>
-<li>
-<p><strong>Assignment 11:</strong> <a href="Labs/lab10-steering.html">Flocks</a>: <strong>Due Dec 2</strong></p>
-</li>
 </ul>
 </div></div></td>
 </tr>
@@ -376,9 +349,6 @@ Transitions. Reorienting a motion. Crossfading.</p>
 </div>
 <div class="ulist">
 <ul>
-<li>
-<p><strong>Assignment 12</strong> <a href="Labs/lab11-free.html">Free Play</a>: <strong>Due Dec 9</strong></p>
-</li>
 <li>
 <p><a href="https://www.skinning.org/direct-methods.pdf">Skinning short course (SIGGRAPH 2014)</a></p>
 </li>
