update week 01 notes

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <div class="ulist">
 <ul>
 <li>
-<p><a href="asst00.html">Assignment 00</a> due September 09, midnight</p>
+<p><a href="asst01-hello.html">Assignment 01</a> due September 17, midnight</p>
 </li>
 </ul>
 </div>
@@ -703,7 +703,7 @@ know that help and support are available. Staff members are trained to support s
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-09-06 10:28:53 -0400
+Last updated 2021-09-09 16:57:43 -0400
 </div>
 </div>
 </body>
