--- a/week02.html
+++ b/week02.html
@@ -42,7 +42,8 @@
 </ul>
 </div>
 <div class="paragraph">
-<p><a href="https://brynmawr.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=d1debb0e-da1f-49bb-8524-ad9c01399aba">Lecture 03 - 9/7/2021</a>,<a href="Notes/Lecture03-9.7.2021.pdf">Notes 9/7/2021</a></p>
+<p><a href="https://brynmawr.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=d1debb0e-da1f-49bb-8524-ad9c01399aba">Lecture 03 - 9/7/2021</a>,<a href="Notes/Lecture03-9.7.2021.pdf">Notes 9/7/2021</a>
+<a href="https://brynmawr.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=424de51e-4278-4812-b6b7-ad9e014c663f">Lecture 04 - 9/9/2021</a>,<a href="Notes/Lecture04-9.9.2021.pdf">Notes 9/9/2021</a></p>
 </div>
 </div>
 </div>
@@ -76,7 +77,7 @@
 <div class="ulist">
 <ul>
 <li>
-<p>Lengyel: Chapter 2, 3.1, Appendix B.1, B.2, B.3, B.6, B.6</p>
+<p>Lengyel: Chapter 2, Appendix B.1, B.2, B.3, B.5, B.6</p>
 </li>
 </ul>
 </div>
@@ -91,20 +92,13 @@
 <div class="ulist">
 <ul>
 <li>
-<p>Particle moving in a circle. <a href="Labs/circle.cpp.txt">AniTk</a>/<a href="Labs/circle.pde.txt">Processing</a>/<a href="circle.cs.txt">Unity</a></p>
+<p>Particle with velocity. <a href="https://github.com/alinen/animation-toolkit/blob/main/classexamples/week01-linearMotion.cpp">Code</a></p>
 </li>
 <li>
-<p>Particle with velocity. <a href="Labs/particle.cpp.txt">AniTk</a>/<a href="Labs/particle.pde.txt">Processing</a>/<a href="Labs/particle.cs.txt">Unity</a></p>
+<p>Particle moving in a circle. <a href="https://github.com/alinen/animation-toolkit/blob/main/classexamples/week01-circularMotion.cpp">Code</a></p>
 </li>
-</ul>
-</div>
-<div class="paragraph">
-<p>Further reading:</p>
-</div>
-<div class="ulist">
-<ul>
 <li>
-<p>Lengyel: Chapter 2, 3.1, Appendix B.1, B.2, B.3, B.6, B.6</p>
+<p>Oscillating particle. <a href="https://github.com/alinen/animation-toolkit/blob/main/classexamples/week01-oscillatingMotion.cpp">Code</a></p>
 </li>
 </ul>
 </div>
@@ -113,7 +107,7 @@
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-09-07 15:52:29 -0400
+Last updated 2021-09-09 16:56:50 -0400
 </div>
 </div>
 </body>
