--- a/asst01-hello.html
+++ b/asst01-hello.html
@@ -463,7 +463,7 @@ videos should be less than 5 MB.
 <div class="sect2">
 <h3 id="_update_your_readme_md">7.4. Update your Readme.md</h3>
 <div class="paragraph">
-<p>Update <code>a1/Readme.md</code> to document the features in your assignment. Your readme should contain your images, gifs, and movies.</p>
+<p>Update <code>assignments/a1-hello/Readme.md</code> to document the features in your assignment. Your readme should contain your images, gifs, and movies.</p>
 </div>
 <div class="paragraph">
 <p>On github, you can drag and drop movies into your readme files. Images and gifs can also be added that way, or by including text such as the following</p>
@@ -482,7 +482,7 @@ videos should be less than 5 MB.
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-09-08 20:41:08 -0400
+Last updated 2021-09-13 13:46:42 -0400
 </div>
 </div>
 </body>
