assignment 1; update website

--- a/schedule.html
+++ b/schedule.html
@@ -508,6 +508,12 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p><a href="week03.html">Lecture notes and resources</a></p>
 </li>
 <li>
+<p><strong>Lab Worksheet</strong> <a href="week03-lab-interpolation.html">Bezier Curves</a>: <strong>Due Sept 16, at midnight</strong> (~30 min lab activity)</p>
+</li>
+<li>
+<p><strong>Assignment 02:</strong> <a href="asst02-interpolation.html">Howl&#8217;s moving casteljau</a>: <strong>Due Sept 24, at midnight</strong></p>
+</li>
+<li>
 <p><a href="Q1Guide.html">Quiz1 Study Guide</a>: Math preliminaries and first animations</p>
 </li>
 </ul>
@@ -756,7 +762,7 @@ Transitions. Reorienting a motion. Crossfading.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-09-16 07:32:20 -0400
+Last updated 2021-09-16 08:40:59 -0400
 </div>
 </div>
 </body>
