--- a/index.html
+++ b/index.html
@@ -122,6 +122,12 @@ on lecture content, worksheets, and assignments.</p>
 <p><a href="week03.html">Lecture notes and resources</a></p>
 </li>
 <li>
+<p><strong>Lab Worksheet</strong> <a href="week03-lab-interpolation.html">Bezier Curves</a>: <strong>Due Sept 16, at midnight</strong> (~30 min lab activity)</p>
+</li>
+<li>
+<p><strong>Assignment 02:</strong> <a href="asst02-interpolation.html">Howl&#8217;s moving casteljau</a>: <strong>Due Sept 24, at midnight</strong></p>
+</li>
+<li>
 <p><a href="Q1Guide.html">Quiz1 Study Guide</a>: Math preliminaries and first animations</p>
 </li>
 </ul>
