--- a/week03.html
+++ b/week03.html
@@ -28,13 +28,34 @@
 <div class="ulist">
 <ul>
 <li>
-<p>Read: TODO (Parent book)</p>
+<p>Linear interpolation</p>
+</li>
+<li>
+<p>Cubic Interpolation: Bezier curves, Bernstein polynomials, de Casteljau&#8217;s algorithm</p>
+</li>
+</ul>
+</div>
+<div class="paragraph">
+<p><a href="https://brynmawr.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=9669311e-4b74-4528-818a-ada301577df5">Lecture 9/14/2021</a>,<a href="Notes/Lecture05-9.14.2021.pdf">Notes</a>
+<a href="https://brynmawr.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=00208c9d-e2c9-4eb1-bbfd-ada600ccaa3b">Lecture 9/16/2021</a>,<a href="Notes/Lecture06-9.16.2021.pdf">Notes</a></p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p>Read: Parent Sections 3.1, 3.2. B5</p>
 </li>
 <li>
 <p>Additional references: Lengyel: 11.3</p>
 </li>
+</ul>
+</div>
+<div class="paragraph">
+<p>Additional Resources and demos:</p>
+</div>
+<div class="ulist">
+<ul>
 <li>
-<p>Linear interpolation <a href="Labs/colorLerp1.cpp.txt">colorLerp1</a>/<a href="Labs/colorLerp2.cpp.txt">colorLerp2</a>/<a href="Labs/particleLerp.cpp.txt">particleLerp</a></p>
+<p>Interpolating color: <a href="https://github.com/alinen/animation-toolkit/blob/main/classexamples/week02-colorLerp.cpp">Demo</a></p>
 </li>
 <li>
 <p><a href="Labs/bezier.svg">Inkscape bezier curve</a> (open file in Inkscape to play with it)</p>
@@ -43,7 +64,10 @@
 <p>de Casteljau&#8217;s algorithm: <a href="Labs/deCasteljau.gif">Demo 1</a>/<a href="Labs/deCasteljau-curlyQ.gif">Demo 2</a></p>
 </li>
 <li>
-<p>TODO: Other interpolation types</p>
+<p><a href="https://www.cs.brynmawr.edu/~alinen/lab-website/cs110/notes/week02.html#_snake">Snake implemented with Processing</a></p>
+</li>
+<li>
+<p><a href="https://www.cs.brynmawr.edu/~alinen/lab-website/cs110/notes/week03.html#_interactive_heart_demo">"Heart" demo with Processing</a></p>
 </li>
 </ul>
 </div>
@@ -52,7 +76,7 @@
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-09-01 21:13:06 -0400
+Last updated 2021-09-17 08:38:59 -0400
 </div>
 </div>
 </body>
