--- a/index.html
+++ b/index.html
@@ -40,7 +40,10 @@
 <div class="ulist">
 <ul>
 <li>
-<p><a href="asst01-hello.html">Assignment 01</a> due September 17, midnight</p>
+<p><a href="asst01-interpolation.html">Assignment 02</a> due September 24, midnight</p>
+</li>
+<li>
+<p><a href="Q1Guide.html">Quiz1 Study Guide</a> <strong>Quiz 1</strong> in class, 30 min, September 28th</p>
 </li>
 </ul>
 </div>
@@ -703,7 +706,7 @@ know that help and support are available. Staff members are trained to support s
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-09-09 16:57:43 -0400
+Last updated 2021-09-21 15:02:58 -0400
 </div>
 </div>
 </body>
