--- a/week04.html
+++ b/week04.html
@@ -22,8 +22,30 @@
 <div class="sect1">
 <h2 id="_week_04_splines">Week 04: Splines</h2>
 <div class="sectionbody">
+<div class="paragraph">
+<p>Lecture topics:</p>
+</div>
 <div class="ulist">
 <ul>
+<li>
+<p>Catmull-ROM splines</p>
+</li>
+<li>
+<p>Hermite splines</p>
+</li>
+</ul>
+</div>
+<div class="paragraph">
+<p><a href="https://brynmawr.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=ff38c2c1-c345-48ac-9925-adaa013ff422">Lecture 9/21/2021</a>, <a href="Notes/Lecture07-9.21.2021.pdf">Notes</a></p>
+</div>
+<div class="paragraph">
+<p>Additional resources and demos:</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p>Parent Sections 3.1, 3.2, 4.1, B.5.1, B.5.2, B.5.5., B.5.6</p>
+</li>
 <li>
 <p>Lengyel: 11.1-11.4</p>
 </li>
@@ -43,7 +65,7 @@
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-09-01 21:13:06 -0400
+Last updated 2021-09-21 15:26:28 -0400
 </div>
 </div>
 </body>
