--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
 <li>
 <p><a href="Q1Guide.html">Quiz1 Study Guide</a> <strong>Quiz 1</strong> in class, 30 min, September 28th</p>
 </li>
+<li>
+<p><strong>Lab Worksheet</strong> <a href="week04-lab-splines.html">Catmull-ROM and Hermite splines</a>: <strong>Due Sept 30th, in class</strong></p>
+</li>
 </ul>
 </div>
 </div>
@@ -146,6 +149,9 @@ on lecture content, worksheets, and assignments.</p>
 <ul>
 <li>
 <p><a href="week04.html">Lecture notes and resources</a></p>
+</li>
+<li>
+<p><strong>Lab Worksheet</strong> <a href="week04-lab-splines.html">Catmull-ROM and Hermite splines</a>: <strong>Due Sept 30th, in class</strong></p>
 </li>
 </ul>
 </div></div></td>
@@ -706,7 +712,7 @@ know that help and support are available. Staff members are trained to support s
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-09-21 16:31:49 -0400
+Last updated 2021-09-24 09:02:11 -0400
 </div>
 </div>
 </body>
