--- a/schedule.html
+++ b/schedule.html
@@ -532,6 +532,9 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li>
 <p><a href="week04.html">Lecture notes and resources</a></p>
 </li>
+<li>
+<p><strong>Lab Worksheet</strong> <a href="week04-lab-splines.html">Catmull-ROM and Hermite splines</a>: <strong>Due Sept 30th, in class</strong></p>
+</li>
 </ul>
 </div></div></td>
 </tr>
@@ -758,7 +761,7 @@ Transitions. Reorienting a motion. Crossfading.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-09-17 17:33:48 -0400
+Last updated 2021-09-24 09:01:48 -0400
 </div>
 </div>
 </body>
