--- a/week03.html
+++ b/week03.html
@@ -69,6 +69,9 @@
 <li>
 <p><a href="https://www.cs.brynmawr.edu/~alinen/lab-website/cs110/notes/week03.html#_interactive_heart_demo">"Heart" demo with Processing</a></p>
 </li>
+<li>
+<p><a href="https://github.com/alinen/animation-toolkit/blob/main/classexamples/week02-drawline.cpp">How to draw a line</a></p>
+</li>
 </ul>
 </div>
 </div>
@@ -76,7 +79,7 @@
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-09-17 08:38:59 -0400
+Last updated 2021-09-23 16:51:12 -0400
 </div>
 </div>
 </body>
