--- a/week04-lab-splines.html
+++ b/week04-lab-splines.html
@@ -16,7 +16,7 @@
 <h2 id="_understanding_splines" class="discrete">Understanding splines</h2>
 <h2 id="_name" class="discrete">Name:</h2>
 <div class="paragraph">
-<p><strong>Due September 23rd, in lab</strong></p>
+<p><strong>Due September 30th, in class</strong></p>
 </div>
 <div class="paragraph">
 <p>This worksheet is intended as a short 30 min exercise to be done in groups of 2-3 people.</p>
@@ -338,7 +338,7 @@ values for each row of P?  What are the values of each \(a_{ij}\)?</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-09-23 12:49:33 -0400
+Last updated 2021-09-24 09:01:10 -0400
 </div>
 </div>
 <script type="text/x-mathjax-config">
