--- a/week04.html
+++ b/week04.html
@@ -36,7 +36,8 @@
 </ul>
 </div>
 <div class="paragraph">
-<p><a href="https://brynmawr.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=ff38c2c1-c345-48ac-9925-adaa013ff422">Lecture 9/21/2021</a>, <a href="Notes/Lecture07-9.21.2021.pdf">Notes</a></p>
+<p><a href="https://brynmawr.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=ff38c2c1-c345-48ac-9925-adaa013ff422">Lecture 9/21/2021</a>, <a href="Notes/Lecture07-9.21.2021.pdf">Notes</a>
+<a href="https://brynmawr.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=10e86795-0fd2-446a-bd41-adac015653a0">Lecture 9/23/2021</a>, <a href="Notes/Lecture08-9.23.2021.psd">Notes</a></p>
 </div>
 <div class="paragraph">
 <p>Additional resources and demos:</p>
@@ -50,10 +51,7 @@
 <p>Lengyel: 11.1-11.4</p>
 </li>
 <li>
-<p>Solving equations using Eigen: <a href="Labs/solveEqn.cpp.txt">Example1</a>/<a href="Labs/hermiteEx.cpp.txt">Example2</a></p>
-</li>
-<li>
-<p>Spline Example: <a href="CatmullRomExample.pdf">Catmull-Rom</a>/<a href="HermiteExample.pdf">Hermite</a></p>
+<p>Solving equations using Eigen: <a href="https://github.com/alinen/animation-toolkit/blob/main/classexamples/week03-solveEqn.cpp">Solve and equation with Eigen</a>/<a href="https://github.com/alinen/animation-toolkit/blob/main/classexamples/week03-hermiteEx.cpp">Solve for Hermite slopes using Eigen</a></p>
 </li>
 <li>
 <p>Hermite endpoint conditions: <a href="Labs/hermiteClamped.gif">Clamped</a>/<a href="Labs/hermiteNatural.gif">Natural</a></p>
@@ -65,7 +63,7 @@
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-09-21 15:26:28 -0400
+Last updated 2021-09-23 16:52:28 -0400
 </div>
 </div>
 </body>
