update class webpage

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <div class="ulist">
 <ul>
 <li>
-<p><a href="asst02-interpolation.html">Assignment 02</a> due September 24, midnight</p>
+<p><a href="asst03-splines.html">Assignment 03</a> due Oct 1, midnight</p>
 </li>
 <li>
 <p><a href="Q1Guide.html">Quiz1 Study Guide</a> <strong>Quiz 1</strong> in class, 30 min, September 28th</p>
@@ -715,7 +715,7 @@ know that help and support are available. Staff members are trained to support s
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-09-24 15:19:51 -0400
+Last updated 2021-09-26 14:58:49 -0400
 </div>
 </div>
 </body>
