--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@ on lecture content, worksheets, and assignments.</p>
 <p><strong>Lab Worksheet</strong> <a href="week04-lab-splines.html">Catmull-ROM and Hermite splines</a>: <strong>Due Sept 30th, in class</strong></p>
 </li>
 <li>
-<p><strong>Assignment 03:</strong> <a href="Labs/asst03-spline.html">The Catmull-Rom Com</a>: <strong>Due Oct 1, midnight</strong></p>
+<p><strong>Assignment 03:</strong> <a href="asst03-splines.html">The Catmull-Rom Com</a>: <strong>Due Oct 1, midnight</strong></p>
 </li>
 </ul>
 </div></div></td>
