--- a/schedule.html
+++ b/schedule.html
@@ -534,7 +534,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p><strong>Lab Worksheet</strong> <a href="week04-lab-splines.html">Catmull-ROM and Hermite splines</a>: <strong>Due Sept 30th, in class</strong></p>
 </li>
 <li>
-<p><strong>Assignment 03:</strong> <a href="Labs/asst03-spline.html">The Catmull-Rom Com</a>: <strong>Due Oct 1, midnight</strong></p>
+<p><strong>Assignment 03:</strong> <a href="asst03-splines.html">The Catmull-Rom Com</a>: <strong>Due Oct 1, midnight</strong></p>
 </li>
 </ul>
 </div></div></td>
@@ -762,7 +762,7 @@ Transitions. Reorienting a motion. Crossfading.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-09-26 14:02:31 -0400
+Last updated 2021-09-28 21:06:57 -0400
 </div>
 </div>
 </body>
