--- a/week04.html
+++ b/week04.html
@@ -37,7 +37,7 @@
 </div>
 <div class="paragraph">
 <p><a href="https://brynmawr.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=ff38c2c1-c345-48ac-9925-adaa013ff422">Lecture 9/21/2021</a>, <a href="Notes/Lecture07-9.21.2021.pdf">Notes</a>
-<a href="https://brynmawr.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=10e86795-0fd2-446a-bd41-adac015653a0">Lecture 9/23/2021</a>, <a href="Notes/Lecture08-9.23.2021.psd">Notes</a></p>
+<a href="https://brynmawr.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=10e86795-0fd2-446a-bd41-adac015653a0">Lecture 9/23/2021</a>, <a href="Notes/Lecture08-9.23.2021.pdf">Notes</a></p>
 </div>
 <div class="paragraph">
 <p>Additional resources and demos:</p>
@@ -63,7 +63,7 @@
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-09-24 15:19:51 -0400
+Last updated 2021-09-29 07:54:11 -0400
 </div>
 </div>
 </body>
