--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <p><a href="asst03-splines.html">Assignment 03</a> due Oct 1, midnight</p>
 </li>
 <li>
-<p><a href="Q1Guide.html">Quiz1 Study Guide</a> <strong>Quiz 1</strong> in class, 30 min, September 28th</p>
+<p><a href="Q2Guide.html">Quiz2 Study Guide</a> <strong>Quiz 2</strong> in lab, 30 min, October 7</p>
 </li>
 <li>
 <p><strong>Lab Worksheet</strong> <a href="week04-lab-splines.html">Catmull-ROM and Hermite splines</a>: <strong>Due Sept 30th, in class</strong></p>
@@ -715,7 +715,7 @@ know that help and support are available. Staff members are trained to support s
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-09-26 14:58:49 -0400
+Last updated 2021-09-29 07:56:06 -0400
 </div>
 </div>
 </body>
