add lab exercise

--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
 <div class="ulist">
 <ul>
 <li>
-<p><a href="asst02-interpolation.html">Assignment 02</a> due September 24, midnight</p>
-</li>
-<li>
-<p><a href="Q1Guide.html">Quiz1 Study Guide</a> <strong>Quiz 1</strong> in class, 30 min, September 28th</p>
-</li>
-<li>
 <p><strong>Lab Worksheet</strong> <a href="week04-lab-splines.html">Catmull-ROM and Hermite splines</a>: <strong>Due Sept 30th, in class</strong></p>
+</li>
+<li>
+<p><a href="asst03-splines.html">Assignment 03</a> due September 24, midnight</p>
+</li>
+<li>
+<p><a href="Q2Guide.html">Quiz2 Study Guide</a> <strong>Quiz 2</strong> in lab, 30 min, October 7th</p>
 </li>
 </ul>
 </div>
@@ -172,6 +172,9 @@ on lecture content, worksheets, and assignments.</p>
 </li>
 <li>
 <p><a href="week05.html">Lecture notes and resources</a></p>
+</li>
+<li>
+<p><a href="week05-lab-euler.html">Euler angle practice</a></p>
 </li>
 </ul>
 </div></div></td>
@@ -712,7 +715,7 @@ know that help and support are available. Staff members are trained to support s
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-09-24 09:02:11 -0400
+Last updated 2021-09-28 15:54:36 -0400
 </div>
 </div>
 </body>
