--- a/schedule.html
+++ b/schedule.html
@@ -555,6 +555,9 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li>
 <p><a href="week05.html">Lecture notes and resources</a></p>
 </li>
+<li>
+<p><a href="week05-lab-euler.html">Euler angle practice</a></p>
+</li>
 </ul>
 </div></div></td>
 </tr>
@@ -761,7 +764,7 @@ Transitions. Reorienting a motion. Crossfading.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-09-24 09:01:48 -0400
+Last updated 2021-09-30 12:05:07 -0400
 </div>
 </div>
 </body>
