--- a/asst04-euler.html
+++ b/asst04-euler.html
@@ -35,7 +35,7 @@
 <h2 id="_assignment_4_you_spin_me_round">Assignment 4: You spin me round</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>_ In which, euler angles and rotation matrices become part of our 3D programming skillset_</p>
+<p><em>In which, euler angles and rotation matrices become part of our 3D programming skillset</em></p>
 </div>
 <div class="paragraph">
 <p><strong>Due Friday, Oct 8, before midnight</strong></p>
@@ -455,7 +455,7 @@ videos should be less than 5 MB.
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-10-02 12:17:02 -0400
+Last updated 2021-10-02 13:54:45 -0400
 </div>
 </div>
 <script type="text/x-mathjax-config">
