tweak bold font in announcements

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <p><a href="Q2Guide.html">Quiz2 Study Guide</a> <strong>Quiz 2</strong> in lab, 30 min, October 7</p>
 </li>
 <li>
-<p><strong>Assignment 04:</strong> <a href="asst04-euler.html">You spin me round</a>: *Due Oct 8</p>
+<p><strong>Assignment 04:</strong> <a href="asst04-euler.html">You spin me round</a>: <strong>Due Oct 8</strong></p>
 </li>
 </ul>
 </div>
@@ -718,7 +718,7 @@ know that help and support are available. Staff members are trained to support s
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-10-02 12:24:34 -0400
+Last updated 2021-10-02 13:55:54 -0400
 </div>
 </div>
 </body>
