post quaternion exercises

--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
 <div class="ulist">
 <ul>
 <li>
-<p><a href="Q2Guide.html">Quiz2 Study Guide</a> <strong>Quiz 2</strong> in lab, 30 min, October 7</p>
+<p><strong>Assignment 05:</strong> <a href="asst05-quat.html">Quazy Quaternions</a>: <strong>Due Oct 22</strong></p>
 </li>
 <li>
-<p><strong>Assignment 04:</strong> <a href="asst04-euler.html">You spin me round</a>: <strong>Due Oct 8</strong></p>
+<p><strong>Lab (Quaternions):</strong> <a href="week08-quat-worksheet.html">Quaternions Worksheet</a>: <strong>Due Oct 21</strong></p>
 </li>
 </ul>
 </div>
@@ -199,6 +199,9 @@ on lecture content, worksheets, and assignments.</p>
 <li>
 <p><a href="week06.html">Lecture notes and resources</a></p>
 </li>
+<li>
+<p><strong>Assignment 05:</strong> <a href="Labs/lab5-quat.html">Quazy Quaternions</a> <strong>Due Oct 21 (after fall break)</strong></p>
+</li>
 </ul>
 </div></div></td>
 </tr>
@@ -229,6 +232,9 @@ on lecture content, worksheets, and assignments.</p>
 <ul>
 <li>
 <p>Lengyel Chpt 4, Parent Chpt 2</p>
+</li>
+<li>
+<p><strong>Lab (Quaternions):</strong> <a href="week08-quat-worksheet.html">Quaternions Worksheet</a>: <strong>Due Oct 21</strong></p>
 </li>
 </ul>
 </div></div></td>
@@ -718,7 +724,7 @@ know that help and support are available. Staff members are trained to support s
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-10-02 13:55:54 -0400
+Last updated 2021-10-15 16:59:04 -0400
 </div>
 </div>
 </body>
