--- a/schedule.html
+++ b/schedule.html
@@ -582,6 +582,9 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li>
 <p><a href="week06.html">Lecture notes and resources</a></p>
 </li>
+<li>
+<p><strong>Assignment 05:</strong> <a href="Labs/lab5-quat.html">Quazy Quaternions</a> <strong>Due Oct 21 (after fall break)</strong></p>
+</li>
 </ul>
 </div></div></td>
 </tr>
@@ -612,6 +615,9 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <ul>
 <li>
 <p>Lengyel Chpt 4, Parent Chpt 2</p>
+</li>
+<li>
+<p><strong>Lab (Quaternions):</strong> <a href="week08-quat-worksheet.html">Quaternions Worksheet</a>: <strong>Due Oct 21</strong></p>
 </li>
 </ul>
 </div></div></td>
@@ -768,7 +774,7 @@ Transitions. Reorienting a motion. Crossfading.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-10-02 12:16:29 -0400
+Last updated 2021-10-15 17:00:07 -0400
 </div>
 </div>
 </body>
